Noch ein paar Abschnitte Innsmouth

--- a/The Shadow over Innsmouth/chapter4.tex
+++ b/The Shadow over Innsmouth/chapter4.tex
@@ -73,3 +73,17 @@ Denn aus der geöffneten Tür des Gilman House strömte eine große Schar verdä
 Ich befand mich nun auf der Washington Street und sah für den Augenblick weder Leben, noch irgendwelches Licht mit Ausnahme des Mondes. Aus mehreren Richtungen in der Ferne jedoch, konnte ich den Klang heiserer Stimmen und von Fußstapfen vernehmen. Ich hatte schlicht keine Zeit zu verlieren. Ich war mir der Himmelsrichtungen bewusst und froh, dass die Straßenbeleuchtung abgeschaltet war, wie es an Nächten mit hellem Mondschein oft der Fall in armen, ländlichen Gegenden war. Einige der Laute kamen aus dem Süden, doch behielt ich meinen Plan bei, in diese Richtung zu entkommen. Es würde, soweit war ich mir sicher, zahlreiche verlassene Eingänge geben, in denen ich mich verstecken konnte, sofern ich auf irgendeine Person oder Grupe treffen sollte, die nach Verfolgern aussah.
 
 Ich lief schnell, leise und hielt mich an die verfallenen Häuser. Obwohl hutlos und zerzaust, sah ich nicht besonders auffällig aus und hatte eine gute Chance, unbemerkt zu passieren, sollte ich gezwungen sein, auf einen zufälligen Fußgänger zu treffen. An der Bates Street bog ich in einen klaffenden Vorhof als zwei watschelnde Gestalten meinen Weg kreuzten, doch war ich bald wieder unterwegs und näherte mich dem offenen Platz an dem die Eliot Street die Washington schräg kreuzt. Obwohl ich diesen Ort nie gesehen hatte, hatte er auf der Karte des Lebensmitteljungen gefährlich ausgesehen, da das Mondlicht hier freies Spiel hatte. Es hatte keinen Zweck, ihm auszuweichen, denn jede andere Route beinhaltete Umleitungen von womöglich verheerender Sichtbarkeit und Verzögerung. Die einzige Möglichkeit bestand darin, den Platz mutig und offen zu überqueren, dabei das typische Watscheln der Innsmouther imitierend, so gut ich konnte und darauf zu hoffen, dass niemand --- oder zumindest keiner meiner Verfolger dort sein würde.
+
+Davon, wie stark die Verfolgung organisiert war --- und was ihr tatsächlicher Zweck sein mochte, konnte ich mir keinen Begriff machen. Die Stadt schien ungewöhnlich lebendig, doch ich schätzte, dass die Kunde von meiner Flucht aus dem Gilman sich noch nicht verbreitet hatte. Ich würde natürlich bald von der Washington auf eine andere Straße nach Süden wechseln müssen, denn die Gesellschaft aus dem Hotel würde zweifelsohne hinter mir her sein. Ich musste Abdrücke im Staub jenes alten Gebäudes hinterlassen haben, die offenbarten, wie ich zur Straße herab gelangt war.
+
+Der offene Platz war, wie erwartet, stark vom Mondlicht erhellt und ich sah die Reste eines parkartigen, eines eisenumzäunten Grüns in seiner Mitte. Glücklicherweise war niemand zugegen, obwohl sich eine Art merkwürdiges Brummen oder Dröhnen aus der Richtung des Marktplatzes aufbaute. South Street war sehr breit und führte an einem kleinen Abhang hinunter direkt ans Ufer und gewährte dort einen Ausblick auf die See --- und ich hoffte, dass von dort niemand aufblickte, während ich den Platz im hellen Mondlicht überquerte.
+
+Mit ungebrochenem Fortschritt und ohne neuerliche Geräusche, die mich darauf hingewiesen hätten, dass ich entdeckt worden war, mäßigte ich mein Tempo für eine Sekunde um den Ausblick auf die See auf mich wirken zu lassen, prachtvoll im glühenden Mondlicht am Ende der Straße. Weit draußen jenseits der Mole war die trübe, dunkle Linie des Devil Reef und als ich es erblickte konnte ich nicht anders, als an all jene hässlichen Legenden, die ich in den letzten vierunddreißig Stunden gehört hatte zu denken --- Legenden die diesen zackigen Felsen als ein wahrhaftiges Tor zu Gefilden unergründeten Schreckens und undenkbarer Abnormität darstellten.
+
+Dann, ohne Vorwarnung, bemerkte ich periodische Lichtblitze auf dem entfernten Riff. Sie waren deutlich und unverkennbar und weckten in meinem Geist eine Blinde Furcht jenseits aller rationalen Maßstäbe. Meine Muskeln spannten sich zur panischen Flucht und wurden nur durch unbewusste Vorsicht und eine halb-hypnotische Faszination gehalten. Und um alles noch schlimmer zu macchen, blitzte nun auch aus der hohen Kuppel des Gilman House, welches im Nordosten hinter mir aufragte eine Reihe vergleichbarer, doch anders aufeinanderfolgender Schimmer die nicht weniger als ein Antwortsignal gewesen sein konnten.
+
+Meine Muskeln wieder kontrollierend und erneut begreifend, wie ausgesprochen sichtbar ich stand, nahm ich meinen strammeren und verstellt watschelnden Schritt wieder auf, doch behielt ich meinen Blick auf dem höllischen und unheilvollen Riff so lange die Öffnung der South Street mir einen BLick zur See gewährte. Was die ganze Prozedur bedeuten sollte, konnte ich mir nicht ausmalen, außer dass es sich um ein fremdartiges Ritual im Zusammenhang mit Devil Reef handelte, oder dass eine Gruppe von einem Schiff aus auf dem finsteren Fels gelandet sei. Ich beugte mich nun nach links um das verfallene Grün, noch immer in Richtung des Ozeans starrend, der im gespenstischen Mondlicht des Sommers funkelte und das kryptische Blinken jener namenlosen, unerklärlichen Leuchtfeuer beobachtend.
+
+Es war genau dann, dass der furchtbarste Eindruck all dessen in mir aufkam --- der Eindruck, der die letzten Überbleibsel von Selbstbeherrschung in mir zerstörte und mich verzweifelt nach Süden, an gähnend schwarzen Eingängen und fischartig starrenden Fenstern jener verlassenen Straße der Alpträume. Denn bei genauerem Blick sah ich, dass die mondbeschienenen Wasser zwischen dem Riff und der Küste alles andere als leer waren. Sie schienen lebendig vor einer wummelnden Horde von Gestalten, die einwärts zur Stadt schwammen und sogar auf meine große Entfernung und in einem einzigen Moment der Wahrnehmung konnte ich erkennen, dass ihre sich auf und ab bewegenden Köpfe und ihre strampelnden Arme fremd und auf eine Weise abnormal waren, der sich kaum ausdrücken oder bewusst formulieren ließ.
+
+      It was then that the most horrible impression of all was borne in upon me—the impression which destroyed my last vestige of self-control and set me running frantically southward past the yawning black doorways and fishily staring windows of that deserted nightmare street. For at a closer glance I saw that the moonlit waters between the reef and the shore were far from empty. They were alive with a teeming horde of shapes swimming inward toward the town; and even at my vast distance and in my single moment of perception I could tell that the bobbing heads and flailing arms were alien and aberrant in a way scarcely to be expressed or consciously formulated.
