Kapitel 4 DURCH. ENDLICH.

--- a/The Shadow over Innsmouth/Innsmouth.tex
+++ b/The Shadow over Innsmouth/Innsmouth.tex
@@ -13,7 +13,7 @@
 \date{}
 \maketitle
 
-\textit{Diese Übersetzung ist noch unvollständig. 3 von 5 Kapiteln des Originals sind roh übersetzt, d.h. potentiell mit Übersetzungs- und Satzfehlern übersät. Außerdem fehlt noch jegliche Rechtschreibkorrektur. Das 4. Kapitel ist zu diesem Zeitpunkt zur Hälfte übersetzt und Kapitel 5 fehlt noch vollständig!}
+\textit{Diese Übersetzung ist noch unvollständig. 4 von 5 Kapiteln des Originals sind roh übersetzt, d.h. potentiell mit Übersetzungs- und Satzfehlern übersät. Außerdem fehlt noch jegliche Rechtschreibkorrektur. Das 5. Kapitel wird hinzugefügt, sobald die ersten vier revidiert wurden.}
 
 \include{chapter1}
 \include{chapter2}
