--- a/The Shadow over Innsmouth/chapter4.tex
+++ b/The Shadow over Innsmouth/chapter4.tex
@@ -85,3 +85,65 @@ Dann, ohne Vorwarnung, bemerkte ich periodische Lichtblitze auf dem entfernten R
 Meine Muskeln wieder kontrollierend und erneut begreifend, wie ausgesprochen sichtbar ich stand, nahm ich meinen strammeren und verstellt watschelnden Schritt wieder auf, doch behielt ich meinen Blick auf dem höllischen und unheilvollen Riff so lange die Öffnung der South Street mir einen BLick zur See gewährte. Was die ganze Prozedur bedeuten sollte, konnte ich mir nicht ausmalen, außer dass es sich um ein fremdartiges Ritual im Zusammenhang mit Devil Reef handelte, oder dass eine Gruppe von einem Schiff aus auf dem finsteren Fels gelandet sei. Ich beugte mich nun nach links um das verfallene Grün, noch immer in Richtung des Ozeans starrend, der im gespenstischen Mondlicht des Sommers funkelte und das kryptische Blinken jener namenlosen, unerklärlichen Leuchtfeuer beobachtend.
 
 Es war genau dann, dass der furchtbarste Eindruck all dessen in mir aufkam --- der Eindruck, der die letzten Überbleibsel von Selbstbeherrschung in mir zerstörte und mich verzweifelt nach Süden, an gähnend schwarzen Eingängen und fischartig starrenden Fenstern jener verlassenen Straße der Alpträume. Denn bei genauerem Blick sah ich, dass die mondbeschienenen Wasser zwischen dem Riff und der Küste alles andere als leer waren. Sie schienen lebendig vor einer wummelnden Horde von Gestalten, die einwärts zur Stadt schwammen und sogar auf meine große Entfernung und in einem einzigen Moment der Wahrnehmung konnte ich erkennen, dass ihre sich auf und ab bewegenden Köpfe und ihre strampelnden Arme fremd und auf eine Weise abnormal waren, der sich kaum ausdrücken oder bewusst formulieren ließ.
+
+Ich stellte mein hektisches Rennen ein, bevor ich einen Block durchmessen hatte, denn zu meiner Linken begann ich so etwas wie das Geschrei organisierter Verfolgung zu vernehmen. Da waren Fußstapfen und kehlige Laute und ein rasselnder Motor schnaufte südwärts, die Federal Street entlang. Innerhalb einer Sekunde änderten sich alle meine Pläne --- denn wenn der Highway nach Süden vor mir abgeriegelt wurde, musste ich natürlich einen anderen Weg aus Innsmouth heraus finden. Ich hielt inne und wand mich in einen klaffenden Hauseingang, darüber sinnend, wieviel Glück ich hatte, aus der mondhellen offenen Fläche geflohen zu sein, bevor jene Verfolger die Parallelstraße hinunter kamen.
+
+Eine weitere Betrachtung brachte weniger tröstliches: Da die Verfolgung eine andere Straße hinunter verlief, war es offensichtlich, dass die Gruppe mir nicht direkt auf den Fersen war, sondern lediglich einem Generalplan zur Abschneidung meiner Flucht folgte. Dies jedoch implizierte, dass alle Straßen, die aus Innsmouth führten ähnlich patrouilliert wurden, denn die Bewohner konnten nicht gewusst haben, welche Route ich zu nehmen beabsichtigt hatte. Wenn dem so wäre, würde ich meine Flucht querfeldein, ab von jeder Straße machen müssen. Doch wie sollte ich das in Anbetracht der sumpfigen und von Bächen durchzogenen Landschaft der Umgebung anstellen? Einen Moment lang war mein Verstand erschüttert --- sowohl von der schieren Hoffnungslosigkeit als auch von dem schnellen Anstieg des omnipräsenten Fischgestanks.
+
+Dann fiel mir die stillgelegte Bahn nach Rowley ein, deren stabile Linie aus befestigter, unkrautbewachsener Erde sich noch immer von dem verfallenen Bahnhof am Rande der Schlucht gen Nordwesten erstrecke. Es bestand noch die Chance, dass die Stadtbewohner nicht daran dachten, da ihre von Gestrüpp bewachsene Verlassenheit sie sehr unwegsam und als unwahrscheinlichsten aller Wege, die ein Flüchtling wählen mochte erscheinen ließ. Ich hatte sie klar von meinem Hotelfenster aus gesehen und wusste, wo sie lag. Der größte Teil der Strecke war unangenehm gut von der Straße nach Rowley und von hohen Orten in der Stadt aus einzusehen. doch würde ich womöglich unauffällig durch das Unterholz kriechen können. Jedenfalls stellte es meine einzige Chance auf Erlösung dar und es blieb mir nichts anderes als es zu versuchen.
+
+Mich in den Flur meiner verlassenen Zuflucht zurückziehend, konsultierte ich ein weiteres mal die Karte des Jungen aus dem Lebensmittelgeschäft. Das unmittelbare Problem bestand darin, wie die uralte Bahnlinie zu erreichen sei und ich erkannte nun, dass die sicherste Route geradeaus zur Babson Street, dann nach Westen zur Lafayette -- dort vorbei an einem, doch nicht über einen offenen Platz ähnlich jenem, den ich bereits überquert hatte --- und anschließend zurück nordwärts und westwärts im Zickzackkurs durch Lafayette, Bates, Adams und Bank Street --- letztere verlief entlang der Schlucht am Fluss hin zu dem verlassenen und verfallenen Bahnhof, den ich von meinem Fenster aus gesehen hatte. Mein Grund, die Babson zu wählen lag darin, dass ich weder den Wunsch verspürte, den Platz noch einmal zu überueren, noch wollte ich meinen Weg westwärts entlang einer Straße so breit wie die South Street beginnen.
+
+Aufs neue beginnend, kreuzte ich die Straße zur rechten um so unauffällig wie möglich in die Babson zu biegen. Es war immer noch Geräusche aus der Federal Street zu vernehmen und als ich hinter mich blickte, glaubte ich, einen Lichtschimmer nahe des Gebäudes, durch welches ich entflohen war zu erspähen. Bestrebt, die Washington Street zu verlassen, verfiel ich in einen ruhigen Hundeschritt, auf mein Glück vertrauend, keinem wachsamen Auge zu begegnen. An der Babson Street bemerkte ich zu meiner Sorge, dass eines der Häuser noch immer bewohnt war, wie die Vorhänge am Fenster belegten, doch waren keine Lichter zu sehen und ich ging ohne Unheil daran vorbei.
+
+In der Babson Street, die die Federal kreuzte und mich daher meinen Verfolgern offenbaren könnte, hielt ich mich so nah wie möglich an den absackenden unregelmäßigen Gebäuden und pausierte zweimal in einem Hauseingang, als die Laute hinter mir vorübergehend stärker wurden. Der weite Platz vor mir schien trostlos im Mondlicht, doch mein Weg würde mich nicht dazu zwingen, ihn zu überqueren. Während meiner zweiten Pause bemerkte ich eine frische Quelle von vagen Lauten und als ich vorsichtich aus meiner Deckung hervorlugte, erblickte ich ein Automobil, das über den Platz entlang der Eliot Street, die sowohl die Babson als auch die Lafayette kreuzt, nach draußen schoss.
+
+Während ich dies --- durch einen plötzlichen Anstieg des Fischgestanks nach einem kurzen Abflauen erstickt --- beobachtete. sah ich eine Gruppe von groben, kriechenden Umrissen in die gleiche Richtung unbeholfen watscheln und ich wusste, dass dies die Gruppe sein musste, die die Straße nach Ipswich bewachte, da diese sich aus der Eliot Street erweitert. Zwei der Gestalten, die ich erspähte waren in wallende Roben gehüllt und eine trug ein spitz zulaufendes Diadem, das im Mondlicht weißlich glänzte. Der Gang dieser Figur war so merkwürdig, dass es mir einen Schauer über den Rücken jagte --- denn es schien mir fast als würde die Gestalt hüpfen.
+
+Als der letzte des Trupps außer Sicht war, nahm ich meinen Schritt wieder auf und lief um die Ecke in die Lafayett Street, kreuzte die Eliot in großer Eile, aus furcht, dass noch Nachzügler der Streife auf diesem Weg vorrückten. Ich hörte ein paar weit entfernte quakende und rumpelnde Geräusche aus Richtung des Dorfplatzes, doch überwand ich diesen Abschnitt ohne Zwischenfall. Meine größte Furcht lag darin, die breite und mondhelle South Street wieder queren zu müssen --- mit ihrer Aussicht zur See --- und ich musste mich für diese Prüfung zusammennehmen. Jemand könnte mühelos herschauen und eine mögliche Nachhut in der Eliot Street musste mich aus einer der beiden Richtungen sehen. Im letzten Moment entschied ich, meinen Schritt lieber zu verlangsamen und die Überquerung wie zuvor im watschelnden Gang eines Bewohners von Innsmouth zu vollziehen.
+
+Als der Blick auf das Wasser sich mir wieder öffnete --- diesmal zu meiner Rechten --- war ich halb entschlossen, überhaupt nicht hin zu sehen. Ich konnte jedoch nicht widerstehen und warf einen Seitenblick während ich vorsichtig nachahmend in in Richtung der schützenden Schatten watschelte. Dort war kein Schiff zu sehen, wie ich es fast erwartet hatte. Stattdessen war das erste, das meinen Blick fing ein kleines Ruderboot, das zu den verlassenen Werften hin einzog und mit einem sperrigen, von einer Plane bedeckten Objekt beladen war. Seine Ruderer, obwohl ich sie nur aus der Ferne und undeutlich gesehen hatte, waren von einer besonders abstoßenden Art. Mehrere Schwimmer waren noch immer zu erkennen, während ich auf dem fernen, schwarzen Riff ein schwaches, beständiges Glühen wahrnahm, ungleich dem flackernden Leuchtfeuer, das vorher zu sehen gewesen war und von einer eigenartigen Farbe, die ich nicht genau identifizieren konnte. Über den schrägen Dächern vor mir und zur Rechten ragte die hohe Kuppel des Gilman House, doch war sie völlig dunkel. Der Fischgestank, kurzzeitig durch eine gnädige Brise verbannt, breitete sich nun wieder mit unerträglicher Intensität aus.
+
+Ich hatte die Straße noch nicht ganz überquert, als ich eine murmelnde Gruppe aus dem Norden entlang der Washington vordringen hörte. Als sie den weiten, offenen Platz erreichten, an dem ich meinen ersten beunruhigenden Blick auf das vom Mond erleuchtete Wasser erhalten hatte, konnte ich sie klar und nur einen Block entfernt erkennen --- und war entsetzt ob der bestialischen Abnormität ihrer Gesichter und der hundeartigen Unmenschlichkeit ihres geduckten Ganges. Ein Mann bewegte sich auf eine geradezu affenartige Art und Weise, mit langen Armen, die oft den Boden berührten, während eine weitere Gestalt --- in Roben und Tiara gekleidet --- auf eine fast hüpfende Art voranzukommen schien. Ich schätzte, dass dieser Trupp derjenige war, den ich im Hof des Gilman gesehen hatte --- und daher derjenige, der mir am dichtesten auf der Spur war. Als einige der Gestalten sich umdrehten um in meine Richtung zu schauen, war ich vor Angst gelähmt, doch schaffte ich es, die lässige, watschelnde Gangart beizubehalten, die ich angenommen hatte. Ich weiß bis heute nicht, ob sie mich gesehen hatten oder nicht. Falls doch, musste meine List sie getäuscht haben, denn sie gingen weiter über den mondhellen Platz ohne ihren Kurs zu ändern --- während sie quakten und schwatzten in einem hasserfüllten, gutturalen Dialekt, den ich nicht verstehen konnte.
+
+Wieder im Schatten, behielt ich meinen Hundegang bis hinter die schiefen und verfallenen Häuser, die leer in die Nacht starrten. Auf den westlichen Bürgersteig gewechselt, bog ich um die nächste Ecke in die Bates Street wo ich mich an die Gebäude auf der Südseite hielt. Ich passierte zwei Häuser, die Zeichen von Bewohnung zeigten und von denen in einem schwache Lichter aus den oberen Räumen zu erkennen waren, doch stieß ich auf kein Hindernis. Als ich in die Adams Street abbog, fühlte ich mich deutlich sicherer, doch erhielt ich einen Schock, als ein Mann aus einem schwarzen Hauseingang direkt vor mir taumelte. Er stellte sich jedoch als hoffnungslos betrunken heraus, um eine Bedrohung zu sein, so dass ich die düseren Ruinen der Lagerhallen in der Bank Street sicher erreichte.
+
+Nichts regte sich in dieser toten Straße an der Schlucht und das Rauschen des Wasserfalls übertönte meine Schritte gänzlich. Es war ein langer, Hunde-Trott zum verfallenen Bahnhof und die hohen Backsteinwände der Lagerhäuser um mich herum schienen mit einem Mal furchterregender als die Fassaden der Privathäuser. Endlich erblickte ich den uralten, von einem Bogengang gesäumten Bahnhofsbau --- oder war davon übrig war --- und lief direkt zu den Gleisen, die an seinem hinteren Ende anfingen.
+
+Die Gleise waren rostig, doch weitestgehend intakt und noch war nicht mehr als die Hälfte der Schwellen verfault. Auf diese Untergrund zu gehen oder zu laufen war sehr schwierig, doch ich tat mein Bestes und kam insgesamt gut voran. Für einige Zeit hielt sich die Linie entlang des Randes der Schlucht, doch bald erreichte ich die lange gedeckte Brücke, wo sie den Abgrund in schwindelerregender Höhe überwand.Der Zustand dieser Brücke würde über mein weiteres Vorgehen entscheiden. Falls menschenmöglich, würde ich sie benutzen, falls nicht, würde ich weiteres Umherirren durch die Straßen riskieren müssen um die nächste intakte Straßenbrücke zu nehmen.
+
+Die riesige, scheunenhafte Strecke der alten Brücke leuchtete im Mondlicht gespenstisch und ich sah, dass die Schwellen immerhin ein paar Fuß weit hinein in Ordnung waren. Drinnen begann ich meine Taschenlampe zu benutzen und wurde fast von einem Schwarm Fledermäuse umgeworfen, der an mir vorbeiflog. Ungefähr zur Mitte der Brücke war ein gefährliches Loch zwischen den Schwellen, von dem ich einen Moment lang fürchtete, dass es mich stoppen würde, doch letztendlich wagte ich einen verzweifelten Sprung, der zu meinem Glück gelang.
+
+Ich war froh, das Mondlicht wieder zu sehen, als ich diesem makabren Tunnel entstieg. Die alten Gleise kreuzten die River Street ebenerdig und schwenkten dann in eine immer ländlicher wirkende Gegend in der Innsmouths abscheulicher Fischgestank weiter und weiter abnahm. Nun behinderte der dichte Bewuchs mit Gräsern und Gestrüpp mein Weiterkommen und riss grausam an meiner Kleidung, doch ich war trotzdem froh darum, dass er mir Tarnung im Gefahrenfall verschaffte. Mir war bewusst, dass ein Großteil meines Weges von der Straße nach Rowley aus einsehbar sein musste.
+
+Das Sumpfgebiet begann bald mit dem einen Gleis auf einem niedrigen, grasbewachsenen Damm, auf dem die Vegetation etwas dünner war. Dann kam eine Art Insel von höherem Grund, durch die die Linie in einem flachen, offenen, mit Büschen und Dornen bewachsenen Kanal schnitt. Ich war sehr froh um diesen teilweisen Schutz, da an diesem Punkt die Straße nach Rowley nach meiner Fensterbeobachtung unbequem nahe lag. Am Ende des Kanals würde sie die Strecke kreuzen und sich dann in sichere Entfernung wunden, doch bis dahin musste ich äußerst vorsichtig sein. Ich war mir zu diesem Zeitpunkt glücklicherweise sicher, dass entlang der Bahnlinie selbst nicht patrouilliert wurde.
+
+Kurz bevor ich den Kanal betrat, blickte ich hinter mich, doch sah ich keine Verfolger. Die uralten Turmspitzen und Dächer des vermodernden Innsmouth schienen schön und ätherisch im zauberhaften gelben Mondlicht und ich dachte daran, wie sie früher ausgesehen haben mussten, bevor der Schatten auf sie fiel. Dann, als mein Blick sich von der Stadt aus landeinwärts wendete, erregte etwas weniger besinnliches meine Aufmerksamkeit und hinterließ mich für eine Sekunde bewegungslos.
+
+Was ich sah --- oder zu sehen glaubte --- war eine verstörende Andeutung einer Wellenbewegung weit im Süden. Eine Andeutung, die mich schließen lies, dass eine sehr große Schar entlang der ebenen Straße nach Ipswich aus der Stadt strömen musste. Sie befand sich in großer Entfernung und ich konnte keine Details erkennen, doch mir gefiel das Aussehen dieser sich bewegenden Kolonne überhaupt nicht. Sie wogte zu sehr und glänzte zu hell im Licht des nun nach Westen ziehenden Mondes. Da war auch eine Andeutung von Lauten, obwohl der Wind in die andere Richtung blies --- eine Andeutung bestialischen Kratzens und Gebrülls, noch schlimmer als das Gemurmel der Gruppen, die ich kurz zuvor angehört hatte.
+
+Allerart unangenehme Vermutungen schossen mir durch den Kopf. Ich erinnerte mich an jene extremen Innsmouther Gestalten, die in den verfallenen, jahrhundertealten Bauten nahe des Ufers leben sollten. Ich erinnerte mich ebenfalls an die namenlosen Schwimmer, die ich gesehen hatte. Die Grupen, die ich bislang erblickt hatte sowie die, die geschätzt die anderen Straßen bewachten zusammengezählt, musste die Zahl meiner Verfolger ungewöhnlich groß für eine so entvölkerte Stadt wie Innsmouth sein.
+
+Woher konnte nur das Personal für eine Kolonne eines Ausmaßes wie des von mir beobachteten kommen? Waren diese uralten, unerforschtenn Bauten wirklich voll mit verdorbenem, nicht katalogisiertem und unvermutetem Leben? Oder hatte doch ein Schiff ungesehen eine Legion von unbekannten Fremden an jenem höllischen Riff gelandet? Wer waren sie? Warum waren sie hier? Und wenn solch eine Kolonne von ihnen die Straße nach Ipswich absuchte, würden die Patrouillen auf den anderen Straßen ähnlich verstärkt?
+
+Ich hatte den mit Gebüsch bewachsenen Kanal betreten und kämpfte mich in sehr zähem Tempo hindurch als jener verdammte Fischgestank wieder dominant wurde. Hatte sich der Wind plötzlich nach Osten gedreht so, dass er nun vom Meer aus über die Stadt wehte? Es musste so sein, folgerte ich, da ich nun begann, entsetzliches, kehliges Gemurmel aus ebenjener bis dahin stillen Richtung zu vernehmen. Da waren noch weitere Geräusche --- eine Art umfassendes, kolossales Flattern und Getrappel, das in mir irgendwie Bilder der widerlichsten Sorte hervorrief. Es ließ mich unlogischerweise an die unheilvoll wogende Kolonne an der weit entfernten Straße nach Ipswich denken.
+
+Und dann wurden sowohl Gestank als auch Geräusch stärker, so dass ich zitternd und dankbar für den Schutz des Kanals innehielt. Es war hier, so erinnerte ich mich, dass die Straße nach Rowley der alten Bahnlinie so nahe kam, bevor sie sie westwärts kreuzte und dann von ihr abwich. Etwas kam diese Straße entlang und ich musste mich versteckt halten, bis es an mir vorübergezogen und in der Ferne verschwunden war. Dem Himmel sei Dank setzten diese Kreaturen keine Hunde zur Spurensuche ein --- obwohl das vielleicht in mitten des omnipräsenten Gestanks der Gegend unmöglich gewesen sein mochte. Gebückt in den Büschen in jener sandigen Kluft fühlte ich mich relativ sicher, obwohl ich wusste, dass die Verfolger die Strecke nicht weiter als einhundert Yards von mir entfernt überqueren werden müssten. Ich würde sie sehen können, doch sie mich nicht, solange kein böswilliges Wunder geschehe.
+
+Plötzlich begann ich mich davor zu fürchten, sie anzuschauen wenn sie vorbeikamen. Ich sah den engen, mondbeschienenen Ort an dem sie vorbeiziehen würden und hatte merkwürdige Gedanken zur rettungslosen Beschmutzung dieses Ortes. Sie würden wahrscheinlich die schlimmsten aller Innsmouther Gestalten sein --- etwas, dessen man sich nicht erinnern möchte.
+
+Der Gestank wurde überwältigend und die Laute schwollen zu einem bestialischen Gewirr aus Gequake, Geheul und Gebell ohne die geringste Andeutung menschlicher Sprache. Waren dies wirklich die Stimmen meiner Verfolger? Hatten sie doch Hunde dabei? Bis jetzt hatte ich keine niederen Tiere in Innsmouth gesehen. Das Flattern und das Getrappel waren nun ungeheuerlich --- ich konnte die entarteten Kreaturen, die sich dafür verantwortlich zeichneten nicht ansehen. Ich würde meine Augen geschlossen halten, bis die Geräusche sich nach Westen verzogen hatten. Die Schar war nun sehr nahe --- die Luft faul mit ihrem heiseren Knurren und der Boden fast zitternd vor ihren fremdartig-rhythmischen Schritten. Mein Atem stockte mir und ich brachte jedes bisschen Willenskraft auf um meine Augen geschlossen zu halten.
+
+Ich bin auch jetzt noch nicht willens zu sagen ob es sicch bei dem, was nun folgte um grausame Wirklichkeit order lediglich alptraumhafte Hallizination handelte. Das spätere Handeln der Regierung nach meinen verzweifelten Aufrufen sollte es als ungeheuerliche Wahrheit bestätigen, doch kann sich eine solche Halluzination nicht unter dem fast hypnotischen Bann dieser uralten, ruhelosen und beschatteten Stadt? Solche Orte haben seltsame Eigenschaften und dieses Vermächtnis an wahnsinnigen Legenden mag wohl mehr als einmal die menschliche Vorstellungskraft inmitten dieser toten, übelriechenden Straßen und dem Durcheinander von modernden Dächern und verfallenen Türmen beeinflusst haben.  Ist es nicht möglich, dass der Keim eines ansteckenden Wahns in den Tiefen des Schattens über Innsmouth lauert? Wer kann sich sicher sein, was Wirklichkeit ist, nachdem er die Geschichten des alten Zadok Allen angehört hat? Die Regierungsleute haben den armen Zadok nie gefunden und haben keine Vermutungen, was aus ihm geworden ist. Wo hört der Wahnsinn auf und beginnt die Realität? Ist es möglich, dass sogar meine neueste Angst schiere Einbildung ist?
+
+Doch ich muss versuchen, zu erzählen, was ich in jener Nacht unter dem spöttischen, gelben Mond zu sehen glaubte --- wogend und hüpfend die Straße nach Rowley hinunter ganz klar vor mir sichtbar während ich im wilden Gestrüpp der verlassenen Bahntrasse kniete. Natürlich war ich mit  meinem Vorsatz, die Augen geschlossen zu halten, gescheitert. Ich war zum Scheitern verdammt --- denn wer könnte sich blind zusammenkauern, während eine Legion quakender, bellender Wesenheiten unbekannten Ursprungs übelriechend vorbeihopsten, kaum mehr als einhundert Yards entfernt?
+
+Ich glaubte, ich sei auf das schlimmste gefasst und ich sollte wirklich darauf gefasst gewesen sein, nach dem was ich bis dahin gesehen hatte. Meine anderen Verfolger waren verflucht und abartig --- sollte ich also nicht bereit gewesen sein, mich einer Erstarkung des abnormalen Elements zu stellen? Formen zu Gesicht bekommen in denen sich überhaupt keine Spur des Normalen mehr fand? Ich öffnete meine Augen nicht, bis der grobe Lärm laut von einer Stelle klar vor mir erklang. Da wusste ich, dass ein großer Teil von ihnen da, wo die Seiten des Kanals abflachten und die Straße die Bahnstrecke kreuzte sichtbar sein musste --- und ich konnte mich nicht länger davon abhalten, eine Stichprobe des Schreckens, den der grinsende gelbe Mond mir darbot zu nehmen.
+
+Es war das Ende --- was auch immer noch von meinem Leben auf dem Boden dieser Erde verbleibt --- jeden Überbleibsels geistigen Friedens und Vertrauens in die Intaktheit der Natur und des menschlichen Geistes. Nichts, das ich mir hätte vorstellen könnte --- nicht einmal etwas, das ich hätte ahnen können, wenn ich die Erzählungen des alten Zadok absolut wörtlich genommen hätte --- wäre auf irgendeine Art vergleichbar mit der dämonischen, blasphemischen Realität die ich erblickte --- oder glaubte zu erblicken. Ich habe versucht, es anzudeuten, um das Grauen, das darin liegt es unverblümt niederzuschreiben hinauszuzögern. Kann es möglich sein, dass dieser Planet wirklich solche Dinge hervorgebracht hat, dass menschliche Augen tatsächlich in Fleisch und Blut gesehen haben, was man bis dahin lediglich aus Fieberfantasien und dürftigen Legenden kannte?
+
+Und doch sah ich sie in einem unendlichen Strom --- hopsend, hüpfend, quakend, blökend --- unmenschlich durch das gespenstische Mondlicht wogend in einer grotesken, bösartigen Sarabande fantastischer Alpträume. Und einige von ihnen trugen spitze Tiaras aus jenem namenlosen weißlich-goldenen metal\dots  andere waren in seltsame Roben gehüllt\dots  und einer, der die Richtung wies, trug einen schaurig buckligen schwarzen Mantel und gestreifte Hosen gekleidet und hatte einen Filzhut auf dem formlosen Ding, dass seinen Kopf darstellte sitzen\dots
+
+Ich glaube, ihre überwiegende Farbgebung war ein gräuliches Grün, obwohl sie weiße Bäuche hatten. Die meisten von ihnen waren gläntend und glitschig, doch die Grate auf ihren Rücken waren schuppig. Ihre Formen deuteten Menschenähnlichkeit an, während ihre Köpfe die von Fischen waren, mit gewaltigen, hervortretenden Augen, die sich nie schlossen. An den Seiten ihrer Hälse lagen pochende Kiemen und ihre langen Tatzen waren mit Schwimmhäuten versehen. Sie hüpften unregelmäßig, manchmal auf zwei Beinen, manchmal auf viel. Ich war irgendwie froh, dass sie nicht mehr als vier Glieder hatten. Ihre quakenden, bellenden Stimmen, offensichtlich gebraucht um Sprache zu artikulieren, hatte all jene dunklen Nuancen des Ausdrucks inne, die ihren starren GEsichtern fehlten.
+
+Doch trotz all ihrer Monstrosität, waren sie mir nicht fremd. Ich wusste genau was sie sein mussten --- denn war nicht die Erinnerung an jene üble Tiara in Newburyport noch frisch? Sie waren die frevelhaften Fischfrösche aus jener namenlosen Ausgestaltung --- lebendig und entsetzlich --- und als ich sie sah, wurde mich auch bewusst, woran mich jener bucklige, Tiara tragende Priester in dem dunklen Kirchenkeller so fürchterlich erinnert hatte. Ihre Zahl lag jenseits jeder Schätzung. Es erschien mir als ob da unendliche Schwärme von ihnen waren --- und wahrscheinlich konnte mein kurzer Blick nur einen Bruchteil davon zeigen. Im nächsten Moment wurde all dies durch eine gnädige Ohnmacht ausgetilgt, die erste, in die ich je fiel.
