--- a/The Shadow over Innsmouth/chapter3.tex
+++ b/The Shadow over Innsmouth/chapter3.tex
@@ -6,11 +6,11 @@ Man hatte mir versichert, dass der alte Mann nur wilde, unzusammenhängende und 
 
 Mir war bewusst, dass ich ihn nicht hier und jetzt behelligen konnte, denn die Feuerwehrmänner würden dies sicherlich bemerken und etwas einzuwenden haben. Stattdessen, überlegte ich, würde ich mich vorbereiten indem ich etwas schwarz gebrannten Schnaps besorgen würde von einem Ort, wo davon nach den Beschreibungen des Jungen aus dem Laden reichlich vorhanden sein sollte. Danach würde ich ganz beiläufig am Feuerwehrhaus herumlungern und mich zum alten Zadok gesellen, nachdem er zu einem seiner häufigen Streifzüge aufgebrochen war. Der Junge hatte erzählt, dass er sehr rastlos war und selten mehr als eine oder zwei Stunden auf einmal vor der Station saß.
 
-Ein Quart Whiskey war leicht, aber nicht billig hinter einem schäbigen Gemischtwarenladen genau hinter dem Platz in der Eliot Street zu beschaffen. Von dem dreckig aussehenden Kerl, der mich dort erwartete, stierte mich ebenfalls ein Hauch des \glqq Innsmouth-Anblickes\grqq an, doch er war auf seine art recht höflich, wahrscheinlich gewohnt an die Kundschaft geselliger Fremder --- Lastwagenfahrer, Goldkäufer und ähnliche Gestalten --- waren gelegentlich in der Stadt.
+Ein Quart Whiskey war leicht, aber nicht billig hinter einem schäbigen Gemischtwarenladen genau hinter dem Platz in der Eliot Street zu beschaffen. Von dem dreckig aussehenden Kerl, der mich dort erwartete, stierte mich ebenfalls ein Hauch des \glqq Innsmouth-Aussehens\grqq an, doch er war auf seine art recht höflich, wahrscheinlich gewohnt an die Kundschaft geselliger Fremder --- Lastwagenfahrer, Goldkäufer und ähnliche Gestalten --- waren gelegentlich in der Stadt.
 
 Den Platz wieder betretend, sah ich dass das Glück mir hold war, denn --- aus der Paine Street um die Ecke des Gilman House schluefrend --- erblickte ich nicht weniger als die große, dürre, lumpige Gestalt des alten Zadok Allen selbst. Getreu meines Planes, gewann ich seine Aufmerksamkeit indem ich die gerade gekaufte Flasche schwenkte und bald war mir  klar, dass er angefangen hatte, mir sehnsüchtig hinterherzuschlurfen als ich in die Waite Street einbog, auf dem Weg in die verlassenste Gegend, die mir einfiel.
 
-Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Laden mir angefertigt hatte und nahm ein vollständig aufgegebenes Stück des südlichen Ufers, das ich zuvor besucht hatte, zum Ziel. Die einzigen Leute, die dort zu sehen gewesen waren, waren die Angler auf der weit entfernten Mole und noch ein paar Blocks südlich konnte ich aus deren Sichtweite geraten, hatte ein Paar Sitzplätze in einer stillgelegten Werft gefunden und konnte dann den alten Zadok für Zeit unbeobachtet befragen. Bevor ich die Main Street erreichte konnte ich hinter mir ein schwaches und keuchendes \glqq Hey Mister!\grqq vernehmen und erlaubte es dem alten Mann, mich einzuholen und einige kräftige Schlucke aus der Flasche zu nehmen.
+Ich wählte meinen Weg gemäß der Karte, die der Junge aus dem Lebensmittelladen mir angefertigt hatte und nahm ein vollständig aufgegebenes Stück des südlichen Ufers, das ich zuvor besucht hatte, zum Ziel. Die einzigen Leute, die dort zu sehen gewesen waren, waren die Angler auf der weit entfernten Mole und noch ein paar Blocks südlich konnte ich aus deren Sichtweite geraten, hatte ein Paar Sitzplätze in einer stillgelegten Werft gefunden und konnte dann den alten Zadok für Zeit unbeobachtet befragen. Bevor ich die Main Street erreichte konnte ich hinter mir ein schwaches und keuchendes \glqq Hey Mister!\grqq vernehmen und erlaubte es dem alten Mann, mich einzuholen und einige kräftige Schlucke aus der Flasche zu nehmen.
 
 Ich begann, meine Fühler auszustrecken während wir die Water Street entlang gingen und uns in mitten der allgegenwärtigen Trostlosigkeit und wirr geneigten Ruinen nach Süden wandten, doch ich fand das die alte Zunge sich nicht so schnell wie ich erhofft hatte, lösen ließ. Nach einiger Zeit sah ich eine grasbewachsene Öffnung zur See hin zwischen verfallenen Ziegelmauern, jenseits derer sich verunkrauteten Ausdehnungen einer alten Werft aus Lehm und Stein zeigten. Haufen von moosbewachsenen Steinen nahe am Wasser versprachen passable Sitzplätze und der Ort war vor jedem möglichen Blick geschützt durch ein zerstörtes Lagerhaus im Norden. Die Aura von Tod und Verlassenheit war morbide und der Fischgestank fast unerträglich, doch ich hatte beschlossen, mich durch nichts abschrecken zu lassen.
 
@@ -72,7 +72,7 @@ Der alte Mann wurde hysterisch und ich begann vor unbenannter Furcht zu erzitter
 
 \glqq Angenomm'n, eines Nachts siehste, wie was schweres jenseits des Roffs von Obeds Dory gehievt wird un' am nächsten Tag hörst Du, dass ein junger Kerl vermisst wird? Na? Hat jemals jemand nochmal die geringste Spur von Hiram Gilman gefunden? Haben sie? Un' Nick Pierce un' Luelly Waite un' Adoniram Southwick un' Henry Garrison? Na? Hehehehe... die Gestalten sprachen Zeichensprache mit ihren Händen.... die, die richtige Hände hatten...
 
-Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leute sahen seine drei Töchter Golddinger tragen, die niemand vorher bei ihnen gesehen hatte und Rauch kam aus dem Schornstein der alten Raffinerie. And're Leute waren auch erfolgreich --- Fisch strömte in Scharen in den Hafen, fertig zum Fang un' weiß der Himmel wie groß die Ladungen waren, die wir nach Newburyport, Arkham und Boston rausschifften. Das war, als Obed die alte Eisenbahnzweigstrecke hierher bauen ließ. Ein paar Fischer aus Kingsport hatten vom Fischfang hier gehört un' kamen in ihren Schaluppen, aber sie gingen alle verschollen. Niemand hat sie je wieder geseh'n. Un' genau dann hatten unsere Leute den Esoterischen Orden des Dagon organisiert un' die Freimaurerhalle von der Golgota-Kommende dafür gekauft... hehehe! Matt Eliot war'n Freimaurer un' gegen den Verkauf, aber er verschwand genau zu der Zeit.
+Also Junge, das war die Zeit als Obed langsam wieder auf die Beine kam. Die Leute sahen seine drei Töchter Golddinger tragen, die niemand vorher bei ihnen gesehen hatte und Rauch kam aus dem Schornstein der alten Raffinerie. And're Leute waren auch erfolgreich --- Fisch strömte in Scharen in den Hafen, fertig zum Fang un' weiß der Himmel wie groß die Ladungen waren, die wir nach Newburyport, Arkham und Boston rausschifften. Das war, als Obed die alte Eisenbahnzweigstrecke hierher bauen ließ. Ein paar Fischer aus Kingsport hatten vom Fischfang hier gehört un' kamen in ihren Schaluppen, aber sie gingen alle verschollen. Niemand hat sie je wieder geseh'n. Un' genau dann hatten unsere Leute den Esoterischen Orden des Dagon organisiert un' die Freimaurerhalle von der Golgatha-Kommende dafür gekauft... hehehe! Matt Eliot war'n Freimaurer un' gegen den Verkauf, aber er verschwand genau zu der Zeit.
 
 Denk dran, ich sagte nicht, dass Obed die Dinge genauso haben wollte wie auf der Kanakeninsel. Ich glaub' nich', dass er zunächst Vermischung mit denen vorhatte, oder irgendwelche Jungen aufzuziehen, bis es sie zum Wasser zieht. Er wollte das Goldzeug un' war bereit, viel dafür zu zahlen, un' ich glaub' die and'ren war'n für eine Weile zufrieden...
 
